--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -3,17 +3,17 @@
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
       <div class="card card-signin mt-4 mb-3">
         <div class="card-body">
-          <form class="form-signin ">
+          <form class="form-signin" [formGroup]="loginForm">
             <div class="p-20 text-center mb-5">
               <img width="60%" alt="Purse Logo" src="assets/images/Purse Diversified Logo - 01.jpg">
             </div>
             <div class="form-label-group mt-3 control">
               <label for="inputEmail small font-weight-bold">Email address:</label>
-              <input  class="form-control" id="inputEmail" type="text" [ngModelOptions]="{standalone: true}" placeholder="Email" [(ngModel)]="postData.email" >
+              <input  class="form-control" id="inputEmail" type="text" formControlName="email" >
             </div>
             <div class="form-label-group mt-3 control">
               <label for="inputPassword small font-weight-bold">Password:</label>
-              <input type="password" id="inputPassword" [ngModelOptions]="{standalone: true}" [(ngModel)]="postData.password" class="form-control" placeholder="Password">
+              <input type="password" id="inputPassword" formControlName="password" class="form-control" placeholder="Password">
             </div>
             <div class="custom-control custom-checkbox mt-2">
               <label class="float-right small">
@@ -23,7 +23,7 @@
               </label>
             </div>
             <div class="mt-5 mb-2">
-                <button class="btn btn-md btn-success btn-block text-uppercase" (click)="loginAction()">Log In</button>
+                <button class="btn btn-md btn-success btn-block text-uppercase" (click)="tryLogin(loginForm.value)">Log In</button>
             </div>
           </form>
           <div class="text-center p-0 pt-3">
