--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
       <div class="card card-signin mt-4 mb-3">
         <div class="card-body">
-          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="register()" novalidate>
+          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="register(registerFormGroup.value)" novalidate>
               <div class="p-15 text-center mb-4">
                   <img width="60%" alt="Angular Logo" src="assets/images/Purse Diversified Logo - 01.jpg">
               </div>
@@ -19,7 +19,7 @@
               </div> 
               <div class="form-group" formGroupName="passwords">
                   <label>Create password</label>
-                  <input class="form-control" type="password" formControlName="password" maxlength="10">
+                  <input class="form-control" type="password" id="password" formControlName="password" maxlength="10">
                   <label>Re-enter password</label>
                   <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
               </div>  
