Account Settings - update fields

--- a/src/app/views/account-settings/account-settings.component.html
+++ b/src/app/views/account-settings/account-settings.component.html
@@ -37,12 +37,12 @@
                   <div class="pl-5">
                     <div class="form-check form-check-inline">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" formControlName="gender" [value]="Male" >Male
+                        <input type="radio" class="form-check-input" formControlName="gender" value="Male" >Male
                       </label>
                     </div>
                     <div class="form-check form-check-inline">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input" formControlName="gender" [value]="Female" >Female
+                        <input type="radio" class="form-check-input" formControlName="gender" value="Female" >Female
                       </label>
                     </div>
                   </div>
@@ -70,6 +70,10 @@
               <div class="form-group">
                   <label>Paymaya Account</label>
                   <input type="number" class="form-control form-control-sm" placeholder="" formControlName="paymayaAccount">
+              </div>
+              <div class="form-group">
+                  <label>Photo</label>
+                  <input type="number" class="form-control form-control-sm" placeholder="" formControlName="bankAccount">
               </div>
               <div class="form-group">
                 <label>Beneficiaries' Details</label>
@@ -116,12 +120,12 @@
                                 <div class="pl-5">
                                   <div class="form-check form-check-inline">
                                     <label class="form-check-label">
-                                      <input type="radio" class="form-check-input" formControlName="gender" [value]="Male" >Male
+                                      <input type="radio" class="form-check-input" formControlName="gender" value="Male" >Male
                                     </label>
                                   </div>
                                   <div class="form-check form-check-inline">
                                     <label class="form-check-label">
-                                      <input type="radio" class="form-check-input" formControlName="gender" [value]="Female" >Female
+                                      <input type="radio" class="form-check-input" formControlName="gender" value="Female" >Female
                                     </label>
                                   </div>
                                 </div>
