--- a/src/app/views/faq/faq.component.html
+++ b/src/app/views/faq/faq.component.html
@@ -1,5 +1,5 @@
-<div class="animated fadeIn">
-    <iframe width="420" height="315"
-    src="https://www.youtube.com/embed/tgbNymZ7vqY">
-    </iframe>
+<div class="animated fadeIn pb-4">
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe class="embed-responsive-item" width="400" height="315" src="https://www.youtube.com/embed/lsTNdMrzhcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </div>
