--- a/src/app/views/account-settings/account-settings.component.html
+++ b/src/app/views/account-settings/account-settings.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-12 col-md-12 col-lg-12 mx-auto">
       <div class="card card-signin mt-4 mb-3">
         <div class="card-body">
-          <form class="register-form" [formGroup]="registerCompleteFormGroup" (ngSubmit)="register(registerCompleteFormGroup.value)" novalidate>
+          <form class="register-form" [formGroup]="registerCompleteFormGroup" (ngSubmit)="completeRegister(registerCompleteFormGroup.value)" novalidate>
               
               <h5 class="card-title text-center mt-4 mb-3 text-success lead font-weight-bold">Complete Your Registration</h5>
               
@@ -25,7 +25,7 @@
               </div>
               <div class="form-group">
                 <label>Date Of Birth</label>
-                <input type="date" class="form-control form-control-sm" placeholder="" formControlName="dateOfBirth">
+                <input type="date" class="form-control form-control-sm" formControlName="dateOfBirth">
               </div>
               <div class="form-group">
                 <label>Place of Birth</label>
@@ -53,27 +53,31 @@
               </div>
               <div class="form-group">
                 <label>Nationality</label>
-                <input type="number" class="form-control form-control-sm" placeholder="" formControlName="nationality">
+                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="nationality">
               </div>
               <div class="form-group">
                   <label>Contact Number</label>
-                  <input type="text" class="form-control form-control-sm" placeholder="" formControlName="contactNumber">
+                  <input type="number" min="0" max="20" class="form-control form-control-sm" placeholder="" formControlName="contactNumber">
                 </div>
               <div class="form-group">
                 <label>Tin Number</label>
-                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="tinNumber">
+                <input type="text" class="form-control form-control-sm" placeholder="000-000-000-000" mask="000-000-000-000" formControlName="tinNumber">
               </div>
               <div class="form-group">
                   <label>Bank Account</label>
-                  <input type="number" class="form-control form-control-sm" placeholder="" formControlName="bankAccount">
+                  <input type="number" min="0" max="20" class="form-control form-control-sm" placeholder="" formControlName="bankAccount">
               </div>
               <div class="form-group">
                   <label>Paymaya Account</label>
-                  <input type="number" class="form-control form-control-sm" placeholder="" formControlName="paymayaAccount">
+                  <input type="text" class="form-control form-control-sm" placeholder="0000 0000 0000 0000" mask="0000 0000 0000 0000" formControlName="paymayaAccount">
               </div>
               <div class="form-group">
                   <label>Photo</label>
-                  <input type="number" class="form-control form-control-sm" placeholder="" formControlName="bankAccount">
+                  <div class="custom-file">
+                      <input type="file" class="custom-file-input" id="customFile" (change)="onFileChange($event)">
+                      <label class="custom-file-label" for="customFile">{{photoFile==null ? 'Choose file': photoFile.name}}</label>
+                  </div>
+                  <!-- <input type="number" class="form-control form-control-sm" placeholder="" formControlName="bankAccount"> -->
               </div>
               <div class="form-group">
                 <label>Beneficiaries' Details</label>
@@ -142,11 +146,11 @@
                               </div>
                               <div class="form-group">
                                   <label>Contact Number</label>
-                                  <input type="text" class="form-control form-control-sm" placeholder="" formControlName="contactNumber">
+                                  <input type="number" min="0" max="20" class="form-control form-control-sm" placeholder="" formControlName="contactNumber">
                                 </div>
                               <div class="form-group">
                                 <label>Tin Number</label>
-                                <input type="text" class="form-control form-control-sm" placeholder="" formControlName="tinNumber">
+                                <input type="text" class="form-control form-control-sm" placeholder="000-000-000-000" mask="000-000-000-000" formControlName="tinNumber">
                               </div>
                           </div>
                       </div>
@@ -155,6 +159,7 @@
                 <button class="btn- btn-sm btn-success float-right mr-3 mb-4" (click)="addBenefeciary()">Add Beneficiary</button>
               </div>
               <div class="form-group">
+                  <p>{{registerCompleteFormGroup.value | json}}</p>
                   <button type="submit" class="btn btn-success btn-block" [disabled]="registerCompleteFormGroup?.invalid"> Submit </button>
               </div>   
           </form>
