--- a/src/app/views/account-settings/account-settings.component.html
+++ b/src/app/views/account-settings/account-settings.component.html
@@ -74,7 +74,7 @@
               <div class="form-group">
                   <label>Photo</label>
                   <div class="custom-file">
-                      <input type="file" class="custom-file-input" id="customFile" (change)="onFileChange($event)">
+                      <input type="file" class="custom-file-input" id="customFile" accept=".png,.jpeg, .jpg" (change)="onFileChange($event)">
                       <label class="custom-file-label" for="customFile">{{photoFile==null ? 'Choose file': photoFile.name}}</label>
                   </div>
                   <!-- <input type="number" class="form-control form-control-sm" placeholder="" formControlName="bankAccount"> -->
