--- a/src/app/containers/default-layout/default-layout.component.css
+++ b/src/app/containers/default-layout/default-layout.component.css
@@ -6,3 +6,8 @@
 .app-header button:nth-child(3) {
     display: none !important;
 }
+
+
+.header-app /deep/ button:last-child{
+    display: none !important;
+}
