--- a/src/app/views/purse/purse.component.html
+++ b/src/app/views/purse/purse.component.html
@@ -3,7 +3,7 @@
       <div class="col-sm-6 col-lg-4">
         <div class="card text-white bg-primary">
           <div class="card-body pb-0">
-            <div class="purse-value">{{ layAwayPurse  | percent}}</div>
+            <div class="purse-value">{{ layAwayPurse  | currency:'PHP':'symbol-narrow':'0.2-2'}}</div>
             <div class="purse-label">Lay-away Purse</div>
           </div>
         </div>
@@ -11,7 +11,7 @@
       <div class="col-sm-6 col-lg-4">
           <div class="card text-white bg-success">
             <div class="card-body pb-0">
-              <div class="purse-value">{{ layAwayPurse  | percent}}</div>
+              <div class="purse-value">{{ layAwayPurse  | currency:'PHP':'symbol-narrow':'0.2-2'}}</div>
               <div class="purse-label">Cash Purse</div>
             </div>
           </div>
@@ -19,7 +19,7 @@
         <div class="col-sm-6 col-lg-4">
             <div class="card text-white bg-warning">
               <div class="card-body pb-0">
-                <div class="purse-value">{{ layAwayPurse  | percent}}</div>
+                <div class="purse-value">{{ layAwayPurse  | currency:'PHP':'symbol-narrow':'0.2-2'}}</div>
                 <div class="purse-label">Level-up Purse</div>
               </div>
             </div>
@@ -27,7 +27,7 @@
         <div class="col-sm-6 col-lg-4">
             <div class="card text-white bg-danger">
               <div class="card-body pb-0">
-                <div class="purse-value">{{ layAwayPurse  | percent}}</div>
+                <div class="purse-value">{{ layAwayPurse  | currency:'PHP':'symbol-narrow':'0.2-2'}}</div>
                 <div class="purse-label">Re-entry Purse</div>
               </div>
             </div>
@@ -35,7 +35,7 @@
         <div class="col-sm-6 col-lg-4">
             <div class="card text-white bg-dark">
               <div class="card-body pb-0">
-                <div class="purse-value">{{ layAwayPurse  | percent}}</div>
+                <div class="purse-value">{{ layAwayPurse  | currency:'PHP':'symbol-narrow':'0.2-2'}}</div>
                 <div class="purse-label">Maintenance Purse</div>
               </div>
             </div>
