--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -7,8 +7,8 @@
   [sidebarToggler]="'lg'"
   [asideMenuToggler]="'lg'">
   <div class="bar-header">
-      <div class="btn-group" dropdown>
-          <img dropdownToggle id="button-basic" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="rounded-circle img-fluid dropdown-toggle float-right mr-2" alt="Cinque Terre" height="35" width="35">
+      <div class="btn-group" dropdown placement="bottom right">
+          <img dropdownToggle id="button-basic" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="rounded-circle img-fluid float-right" alt="Cinque Terre" height="35" width="35">
           <!-- <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                   aria-controls="dropdown-basic">
             Button dropdown <span class="caret"></span>
