feat: update pages for data needed

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -43,6 +43,5 @@
   </main>
 </div>
 <app-footer>
-  <span><a href="https://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span>
-  <span class="ml-auto">Powered by <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
+  <span><a href="https://purse-diverse.firebaseapp.com/">Purse Diversified</a> &copy; 2019 Purse Diversified</span>
 </app-footer>
