--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
       <div class="col-sm-6 col-lg-4">
           <div class="card text-white bg-success border-0 rounded-0">
             <div class="card-body py-1 px-3">
-              <div class="normal-text">Your Code: {{code}}</div>
+              <div class="normal-text">Your Referral Code: {{code}}</div>
             </div>
           </div>
       </div>
