--- a/src/app/views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-dashboard/admin-dashboard.component.html
@@ -6,8 +6,8 @@
           <button type="button" class="btn btn-transparent p-0 float-right">
             <i class="icon-location-pin"></i>
           </button>
-          <div class="text-value">9.823</div>
-          <div>Members online</div>
+          <div class="text-value">300</div>
+          <div>Members</div>
         </div>
         <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
           <canvas baseChart class="chart"
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="text-value">9.823</div>
-          <div>Members online</div>
+          <div>Sellers</div>
         </div>
         <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
           <canvas baseChart class="chart"
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="text-value">9.823</div>
-          <div>Members online</div>
+          <div>Active Members</div>
         </div>
         <div class="chart-wrapper mt-3" style="height:70px;">
           <canvas baseChart class="chart"
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="text-value">9.823</div>
-          <div>Members online</div>
+          <div>Inactive Members Count</div>
         </div>
         <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
           <canvas baseChart class="chart"
@@ -107,8 +107,8 @@
     <div class="card-body">
       <div class="row">
         <div class="col-sm-5">
-          <h4 class="card-title mb-0">Traffic</h4>
-          <div class="small text-muted">November 2017</div>
+          <h4 class="card-title mb-0">Cycle Graph</h4>
+          <div class="small text-muted">October 2019</div>
         </div><!--/.col-->
         <div class="col-sm-7 d-none d-md-block">
           <button type="button" class="btn btn-primary float-right"><i class="icon-cloud-download"></i></button>
@@ -132,36 +132,36 @@
     <div class="card-footer">
       <div class="row text-center">
         <div class="col-sm-12 col-md mb-sm-2 mb-0">
-          <div class="text-muted">Visits</div>
-          <strong>29.703 Users (40%)</strong>
+          <div class="text-muted">ALPHA-01</div>
+          <strong>29.703 Members (40%)</strong>
           <div class="progress progress-xs mt-2">
             <div class="progress-bar bg-success" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
         <div class="col-sm-12 col-md mb-sm-2 mb-0">
-          <div class="text-muted">Unique</div>
-          <strong>24.093 Users (20%)</strong>
+          <div class="text-muted">BRAVO-01</div>
+          <strong>24.093 Members (20%)</strong>
           <div class="progress progress-xs mt-2">
             <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
         <div class="col-sm-12 col-md mb-sm-2 mb-0">
-          <div class="text-muted">Pageviews</div>
-          <strong>78.706 Views (60%)</strong>
+          <div class="text-muted">LEVEL A: PHP 300.00</div>
+          <strong>78.706 Members (60%)</strong>
           <div class="progress progress-xs mt-2">
             <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
         <div class="col-sm-12 col-md mb-sm-2 mb-0">
-          <div class="text-muted">New Users</div>
-          <strong>22.123 Users (80%)</strong>
+          <div class="text-muted">LEVEL B: PHP 500.00</div>
+          <strong>5.123 Users (5%)</strong>
           <div class="progress progress-xs mt-2">
-            <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar bg-danger" role="progressbar" style="width: 5%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
         <div class="col-sm-12 col-md mb-sm-2 mb-0">
-          <div class="text-muted">Bounce Rate</div>
-          <strong>40.15%</strong>
+          <div class="text-muted">LEVEL H: INACTIVE</div>
+          <strong>40.15% Members (40%)</strong>
           <div class="progress progress-xs mt-2">
             <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
@@ -171,7 +171,7 @@
   </div>
   <!--/.card-->
   <div class="row">
-    <div class="col-sm-6 col-lg-3">
+  <!--  <div class="col-sm-6 col-lg-3">
       <div class="brand-card">
         <div class="brand-card-header bg-facebook">
           <i class="fa fa-facebook"></i>
@@ -196,7 +196,8 @@
           </div>
         </div>
       </div>
-    </div><!--/.col-->
+    </div> --><!--/.col-->
+   <!-- 
     <div class="col-sm-6 col-lg-3">
       <div class="brand-card">
         <div class="brand-card-header bg-twitter">
@@ -222,7 +223,8 @@
           </div>
         </div>
       </div>
-    </div><!--/.col-->
+    </div> --> <!--/.col-->
+    <!-- 
     <div class="col-sm-6 col-lg-3">
       <div class="brand-card">
         <div class="brand-card-header bg-linkedin">
@@ -248,7 +250,8 @@
           </div>
         </div>
       </div>
-    </div><!--/.col-->
+    </div> --><!--/.col-->
+    <!-- 
     <div class="col-sm-6 col-lg-3">
       <div class="brand-card">
         <div class="brand-card-header bg-google-plus">
@@ -274,13 +277,13 @@
           </div>
         </div>
       </div>
-    </div><!--/.col-->
+    </div>--><!--/.col-->
   </div><!--/.row-->
   <div class="row">
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
-          Traffic &amp; Sales
+          Member's Activities
         </div>
         <div class="card-body">
           <div class="row">
@@ -288,16 +291,16 @@
               <div class="row">
                 <div class="col-sm-6">
                   <div class="callout callout-info">
-                    <small class="text-muted">New Clients</small>
+                    <small class="text-muted">New Members</small>
                     <br>
-                    <strong class="h4">9,123</strong>
+                    <strong class="h4">120</strong>
                   </div>
                 </div><!--/.col-->
                 <div class="col-sm-6">
                   <div class="callout callout-danger">
-                    <small class="text-muted">Recuring Clients</small>
+                    <small class="text-muted">Active Cycle</small>
                     <br>
-                    <strong class="h4">22,643</strong>
+                    <strong class="h4">59</strong>
                   </div>
                 </div><!--/.col-->
               </div><!--/.row-->
@@ -412,16 +415,16 @@
               <div class="row">
                 <div class="col-sm-6">
                   <div class="callout callout-warning">
-                    <small class="text-muted">Pageviews</small>
+                    <small class="text-muted">New Sellers</small>
                     <br>
-                    <strong class="h4">78,623</strong>
+                    <strong class="h4">78</strong>
                   </div>
                 </div><!--/.col-->
                 <div class="col-sm-6">
                   <div class="callout callout-success">
-                    <small class="text-muted">Organic</small>
+                    <small class="text-muted">Inactive Member</small>
                     <br>
-                    <strong class="h4">49,123</strong>
+                    <strong class="h4">49</strong>
                   </div>
                 </div><!--/.col-->
               </div><!--/.row-->
@@ -510,7 +513,7 @@
               <tr>
                 <th class="text-center"><i class="icon-people"></i></th>
                 <th>User</th>
-                <th class="text-center">Country</th>
+                <!-- <th class="text-center">Country</th> -->
                 <th>Usage</th>
                 <th class="text-center">Payment Method</th>
                 <th>Activity</th>
@@ -527,19 +530,19 @@
                 <td>
                   <div>Yiorgos Avraamu</div>
                   <div class="small text-muted">
-                    <span>New</span> | Registered: Jan 1, 2015
+                    <span>New</span> | Registered: Jan 1, 2019
                   </div>
                 </td>
-                <td class="text-center">
+                <!-- <td class="text-center">
                   <i class="flag-icon flag-icon-us h4 mb-0" title="us" id="us"></i>
-                </td>
+                </td> -->
                 <td>
                   <div class="clearfix">
                     <div class="float-left">
                       <strong>50%</strong>
                     </div>
                     <div class="float-right">
-                      <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
+                      <small class="text-muted">Completion</small>
                     </div>
                   </div>
                   <div class="progress progress-xs">
@@ -565,19 +568,19 @@
                   <div>Avram Tarasios</div>
                   <div class="small text-muted">
 
-                    <span>Recurring</span> | Registered: Jan 1, 2015
+                    <span>Renewed</span> | Registered: Jan 1, 2019
                   </div>
                 </td>
-                <td class="text-center">
+                <!-- <td class="text-center">
                   <i class="flag-icon flag-icon-br h4 mb-0" title="br" id="br"></i>
-                </td>
+                </td> -->
                 <td>
                   <div class="clearfix">
                     <div class="float-left">
                       <strong>10%</strong>
                     </div>
                     <div class="float-right">
-                      <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
+                      <small class="text-muted">Completion</small>
                     </div>
                   </div>
                   <div class="progress progress-xs">
@@ -602,19 +605,19 @@
                 <td>
                   <div>Quintin Ed</div>
                   <div class="small text-muted">
-                    <span>New</span> | Registered: Jan 1, 2015
+                    <span>New</span> | Registered: Jan 1, 2019
                   </div>
                 </td>
-                <td class="text-center">
+                <!-- <td class="text-center">
                   <i class="flag-icon flag-icon-in h4 mb-0" title="in" id="in"></i>
-                </td>
+                </td> -->
                 <td>
                   <div class="clearfix">
                     <div class="float-left">
                       <strong>74%</strong>
                     </div>
                     <div class="float-right">
-                      <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
+                      <small class="text-muted">Completion</small>
                     </div>
                   </div>
                   <div class="progress progress-xs">
@@ -642,16 +645,16 @@
                     <span>New</span> | Registered: Jan 1, 2015
                   </div>
                 </td>
-                <td class="text-center">
+                <!-- <td class="text-center">
                   <i class="flag-icon flag-icon-fr h4 mb-0" title="fr" id="fr"></i>
-                </td>
+                </td> -->
                 <td>
                   <div class="clearfix">
                     <div class="float-left">
                       <strong>98%</strong>
                     </div>
                     <div class="float-right">
-                      <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
+                      <small class="text-muted">Completion</small>
                     </div>
                   </div>
                   <div class="progress progress-xs">
@@ -676,19 +679,19 @@
                 <td>
                   <div>Agapetus Tadeáš</div>
                   <div class="small text-muted">
-                    <span>New</span> | Registered: Jan 1, 2015
+                    <span>New</span> | Registered: Jan 1, 2019
                   </div>
                 </td>
-                <td class="text-center">
+                <!-- <td class="text-center">
                   <i class="flag-icon flag-icon-es h4 mb-0" title="es" id="es"></i>
-                </td>
+                </td> -->
                 <td>
                   <div class="clearfix">
                     <div class="float-left">
                       <strong>22%</strong>
                     </div>
                     <div class="float-right">
-                      <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
+                      <small class="text-muted">Completion</small>
                     </div>
                   </div>
                   <div class="progress progress-xs">
@@ -716,16 +719,16 @@
                     <span>New</span> | Registered: Jan 1, 2015
                   </div>
                 </td>
-                <td class="text-center">
+                <!-- <td class="text-center">
                   <i class="flag-icon flag-icon-pl h4 mb-0" title="pl" id="pl"></i>
-                </td>
+                </td> -->
                 <td>
                   <div class="clearfix">
                     <div class="float-left">
                       <strong>43%</strong>
                     </div>
                     <div class="float-right">
-                      <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
+                      <small class="text-muted">Completion</small>
                     </div>
                   </div>
                   <div class="progress progress-xs">
