--- a/src/app/views/purse/purse.component.html
+++ b/src/app/views/purse/purse.component.html
@@ -32,14 +32,14 @@
               </div>
             </div>
         </div>
-        <div class="col-sm-6 col-lg-4">
+        <!-- <div class="col-sm-6 col-lg-4">
             <div class="card text-white bg-dark">
               <div class="card-body pb-0">
                 <div class="purse-value">{{ layAwayPurse  | currency:'PHP':'symbol-narrow':'0.2-2'}}</div>
                 <div class="purse-label">Maintenance Purse</div>
               </div>
             </div>
-        </div>
+        </div> -->
     </div>
   </div>
   
