--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -22,6 +22,10 @@
                   <input class="form-control" type="password" id="password" formControlName="password" maxlength="10">
                   <label>Re-enter password</label>
                   <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
+              </div>
+              <div class="form-group">
+                <label>Upline/Referrer Code</label>
+                <input class="form-control" formControlName="referrerCode"> 
               </div>  
               <div class="form-group mt-4">
                   <button type="submit" class="btn btn-success btn-block" [disabled]="registerFormGroup?.invalid"> Register   </button>
