--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -1,47 +1,103 @@
 <div class="container-fluid background">
   <div class="row">
-    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+    <div class="col-sm-5">
       <div class="card card-signin mt-4 mb-3">
         <div class="card-body">
-          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="register(registerFormGroup.value)" novalidate>
-              <div class="p-15 text-center mb-4">
-                  <img width="60%" alt="Angular Logo" src="assets/images/Purse Diversified Logo - 01.jpg">
-              </div>
-              <h5 class="card-title text-center mt-4 mb-3 text-success lead font-weight-bold">REGISTER</h5>
+          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="register(registerFormGroup.value)"
+            novalidate>
+            <div class="p-15 text-center mb-4">
+              <img width="60%" alt="Angular Logo" src="assets/images/Purse Diversified Logo - 01.jpg">
+            </div>
+            <h5 class="card-title text-center mt-4 mb-3 text-success lead font-weight-bold">REGISTER</h5>
+            <div *ngIf="isSeller" class="animated fadeIn fadeOut">
               <div class="form-group">
-                  <label>Email address</label>
-                  <input type="email" class="form-control" placeholder="" formControlName="email">
-                  <!-- <small class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-              </div>
-              <div class="form-group">
-                <label>Code</label>
-                <input class="form-control" type="text" formControlName="code">
-              </div> 
-              <div class="form-group" formGroupName="passwords">
-                  <label>Create password</label>
-                  <input class="form-control" type="password" id="password" formControlName="password" maxlength="10">
-                  <label>Re-enter password</label>
-                  <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
+                <label>Seller Name</label>
+                <input class="form-control" formControlName="sellerName">
               </div>
               <div class="form-group">
-                <label>Upline/Referrer Code</label>
-                <input class="form-control" formControlName="referrerCode"> 
-              </div>  
-              <div class="form-group mt-4">
-                  <button type="submit" class="btn btn-success btn-block" [disabled]="registerFormGroup?.invalid"> Register   </button>
-                  <!-- <p>dasd {{registerFormGroup.controls['emailAddress'].value}}</p>
+                <label>Contact Number</label>
+                <input class="form-control" type="number" formControlName="contactNumber">
+              </div>
+              <div class="form-group">
+                <label>Facebook/Website URL</label>
+                <input class="form-control" type="text" formControlName="sellerUrl">
+              </div>
+            </div>
+            <div class="form-group">
+              <label>Email address</label>
+              <input type="email" class="form-control" placeholder="" formControlName="email">
+              <!-- <small class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+            </div>
+            <div class="form-group">
+              <label>Code</label>
+              <input class="form-control" type="text" formControlName="code">
+            </div>
+            <div class="form-group" formGroupName="passwords">
+              <label>Create password</label>
+              <input class="form-control" type="password" id="password" formControlName="password" maxlength="10">
+              <label>Re-enter password</label>
+              <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
+            </div>
+            <div class="form-group">
+              <label>Upline/Referrer Code</label>
+              <input class="form-control" formControlName="referrerCode">
+            </div>
+            <div class="form-group text-center">
+              <h4>Register as</h4>
+              <div class="row">
+                <div class="col-2" style="margin-left:33%">
+                  <label for="seller">Seller</label>
+                  <input class="form-control" type="radio" name="isSeller" id="seller" [value]="1" formControlName="isSeller">
+                </div>
+                <div class="col-2">
+                  <label for="member">Member</label>
+                  <input type="radio" class="form-control" name="isSeller" id="member" [value]="0" formControlName="isSeller">
+                </div>
+              </div>
+            </div>
+            <div class="form-group mt-4">
+              <button type="submit" class="btn btn-success btn-block" [disabled]="registerFormGroup?.invalid"> Register
+              </button>
+              <!-- <p>dasd {{registerFormGroup.controls['emailAddress'].value}}</p>
                   <p>qweqwew {{registerFormGroup | json}}</p> -->
-              </div>    
-              <!-- <small class="text-muted">By clicking the 'Register' button, you confirm that you accept our <br> Terms of use and Privacy Policy.</small>                                           -->
-              <small class="form-text text-muted text-center">Already have an account? Login 
-                  <a class="text-success font-weight-bold" routerLink="/login" routerLinkActive="active">
-                    here
-                  </a>
-              </small>
+            </div>
+            <!-- <small class="text-muted">By clicking the 'Register' button, you confirm that you accept our <br> Terms of use and Privacy Policy.</small>                                           -->
+            <small class="form-text text-muted text-center">Already have an account? Login
+              <a class="text-success font-weight-bold" routerLink="/login" routerLinkActive="active">
+                here
+              </a>
+            </small>
           </form>
         </div>
       </div>
     </div>
+    <div class="col-sm-7">
+      <div class="card card-signin mt-4 mb-3">
+        <div class="animated fadeIn">
+          <div class="embed-responsive embed-responsive-21by9">
+            <iframe class="embed-responsive-item" width="400" height="315"
+              src="https://www.youtube.com/embed/lsTNdMrzhcA" frameborder="0"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="carousel">
+        <!-- <ngu-carousel #myCarousel [inputs]="carouselConfig" [dataSource]="test">
+          <div *nguCarouselDef="let item;" class="item">
+            <div class="tile">{{item}}</div>
+          </div>
+          <button NguCarouselNext class="rightRs">></button>
+          <button NguCarouselPrev class="leftRs"><</button>
+          <ul class="myPoint" NguCarouselPoint>
+            <li *ngFor="let j of myCarousel.pointNumbers; let j = index" [class.active]="j==myCarousel.activePoint" (click)="myCarousel.moveTo(j)"></li>
+          </ul>
+        </ngu-carousel> -->
+        <!-- <carousel [value]="test">
+          <ng-template let-car pTemplate="item">
+              Content to display
+          </ng-template>
+      </carousel> -->
+      </div>
+    </div>
   </div>
 </div>
-
