--- a/src/app/views/vouchers/vouchers.component.scss
+++ b/src/app/views/vouchers/vouchers.component.scss
@@ -4,3 +4,14 @@
         float: right;
 }
 
+#no-border p-table {
+        border: 0px !important;
+}
+
+.w-10 {
+        width: 10%;
+}
+
+.w-15 {
+        width: 15%;
+}
