--- a/src/app/views/new-page/new-page.component.html
+++ b/src/app/views/new-page/new-page.component.html
@@ -7,15 +7,15 @@
             <form [formGroup]="contentForm" (ngSubmit)="saveNewFeaturedContent()">
                 <div class="form-group">
                     <label>Title</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" formControlName="title">
                 </div>
                 <div class="form-group">
                     <label>Image</label>
-                    <input type="file" class="form-control">
+                    <input type="file" class="form-control" formControlName="image">
                 </div>
                 <div class="form-group">
                     <label>Description</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" formControlName="description">
                 </div>
                 <button class="btn btn-success" type="submit">Save</button>
             </form>
