--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -86,9 +86,15 @@
       <div class="carousel">
         <ngu-carousel #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems | async">
           <ngu-tile *nguCarouselDef="let item; let i = index; let ani = animate">
-            <div class="tile">
-              <img style="width:100%;height:180px;" [src]="item.photoUrl" alt="" />
-            </div>
+              <div class="card" style="width: 100%;">
+                <div class="m-2">
+                    <img [src]="item.photoUrl" class="card-img-top" style="height: 18em;">
+                </div>
+                  <div class="card-body">
+                    <h4>Title</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
           </ngu-tile>
           <button NguCarouselNext class="rightRs">></button>
           <button NguCarouselPrev class="leftRs"><</button>
