--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid background">
+<div class="container">
   <div class="row">
     <div class="col-sm-5">
       <div class="card card-signin mt-4 mb-3">
