[Quit] Added quit modal

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -15,6 +15,7 @@
           </button> -->
           <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
               role="menu" aria-labelledby="button-basic">
+            <li><span class="dropdown-item" (click)="accountSettings()">Account Settings</span></li>
             <li role="menuitem"><span class="dropdown-item" (click)="logout()">Log Out</span></li>
             <!-- <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li> -->
          
