--- a/src/app/views/new-page/new-page.component.html
+++ b/src/app/views/new-page/new-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="card mx-auto">
-        <div class="pt-2 card-header w-100">
+    <div class="card w-100 mx-auto">
+        <div class="pt-2 card-header">
             <h3 class="mt-3">Create new featured content</h3>
         </div>
         <div class="card-body py-3">
