--- a/src/app/views/seller-profile/seller-profile.component.html
+++ b/src/app/views/seller-profile/seller-profile.component.html
@@ -39,7 +39,7 @@
         </div>
         <div class="col-sm-6 col-lg-9">
             <div class="card">
-              
+                <p-tabMenu [model]="items" [activeItem]="items[0]"></p-tabMenu>
             </div>
         </div>
     </div>
