--- a/src/app/views/seller-profile/seller-profile.component.html
+++ b/src/app/views/seller-profile/seller-profile.component.html
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <div class="form-group">
                         <label>Contact Number</label>
-                        <input class="form-control" type="number" formControlName="contactNumber">
+                        <input class="form-control" type="number" formControlName="contactNumber" oninput="validity.valid||(value='');">
                     </div>
                     <div class="form-group">
                         <label>Facebook/Website URL</label>
