fix|refactor [RegisterComponent] add new services and model for upline and utils

--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-5">
       <div class="card card-signin mt-4 mb-3">
         <div class="card-body">
-          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="registerV2(registerFormGroup.value)"
+          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="register(registerFormGroup.value)"
             novalidate>
             <div class="p-15 text-center mb-4">
               <img width="60%" alt="Angular Logo" src="assets/images/Purse Diversified Logo - 01.jpg">
@@ -77,9 +77,9 @@
       <div class="card card-signin mt-4 mb-3">
         <div class="animated fadeIn">
           <div class="embed-responsive embed-responsive-21by9">
-            <iframe class="embed-responsive-item" width="400" height="315"
+            <!-- <iframe class="embed-responsive-item" width="400" height="315"
               src="https://www.youtube.com/embed/lsTNdMrzhcA" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
           </div>
         </div>
       </div>
