--- a/src/app/views/vouchers/vouchers.component.html
+++ b/src/app/views/vouchers/vouchers.component.html
@@ -20,8 +20,8 @@
                     <td>₱{{voucher.amount}}</td>
                     <td *ngIf="!isAdmin">{{voucher.status | uppercase}}</td>
                     <td *ngIf="isAdmin">
-                        <button class="btn btn-success mx-1" (click)="approveVoucher(voucher?.id)">Approve</button>
-                        <button class="btn btn-danger" (click)="denyVoucher(voucher?.id)">Deny</button>
+                        <button class="btn btn-success mx-1" (click)="approveVoucher(voucher)">Approve</button>
+                        <button class="btn btn-danger" (click)="denyVoucher(voucher)">Deny</button>
                     </td>
                 </tr>
             </ng-template>
